Scaling up now works, but get's weird answers

--- a/Write-Up/writeup.tex
+++ b/Write-Up/writeup.tex
@@ -11,7 +11,8 @@
 \maketitle
 
 \section{Introduction and Purpose}
-This is time for all good men to come to the aid of their party!
+The topic
+
 
 \paragraph{Algorithim to be Parallelized}
 
